Create and fill up the topics

--- a/website/Climatological/Drought/Drought.html
+++ b/website/Climatological/Drought/Drought.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Sink holes</title>
+    <title>Drought</title>
 
     <style>
         * {
@@ -111,18 +111,18 @@ img {
         </header>
         
     <div style="text-align:center;">
-    <h1>Sink holes</h1>
+    <h1>Drought</h1>
     </div>
   
 
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What is a Sink holes?</b></h2>
-        <p class="paragraph">Sinkholes are part of the slow, natural process of erosion in Florida’s limestone terrain that occur over thousands of years. These common geologic phenomena generally occur where the limestone is within a few hundred feet of the land’s surface.Though most are only 10 to 12 feet in diameter, sinkholes have been known to expand to hundreds of feet in diameter. Many of central and north Florida’s lakes actually are the result of old sinkholes.</p>
+        <h2 class="xlarge-font"><b>What is a Drought?</b></h2>
+        <p class="paragraph">A  drought is a period of time when an area or region experiences below-normal precipitation. The lack of adequate precipitation, either rain or snow, can cause reduced soil moisture or groundwater, diminished stream flow, crop damage, and a general water shortage. Droughts are the second-most costly weather events after hurricanes.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole2.jpg" width="335" height="471">
+          <img src="../../../Images/normal_section/DroughtRealistic.jpg" width="335" height="471">
       </div>
     </div>
   </div>
@@ -133,11 +133,15 @@ img {
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What causes Sink holes and where do they happen?</b></h2>
-        <p class="paragraph">Rainfall percolating, or seeping, through the soil absorbs carbon dioxide and reacts with decaying vegetation, creating a slightly acidic water. That water moves through spaces and cracks underground, slowly dissolving limestone and creating a network of cavities and voids. As the limestone dissolves, pores and cracks are enlarged and carry even more acidic water. Sinkholes are formed when the land surface above collapses or sinks into the cavities or when surface material is carried downward into the voids.</p>
+        <h2 class="xlarge-font"><b>What causes Drought and where do they happen?</b></h2>
+        <p class="paragraph"> The main cause of drought is drier than normal weather conditions for a given area or region, which can lead to water supply problems. High temperatures can worsen drought, they can cause soil moisture to evaporate. However, just because a region is hot and dry does not mean that it is experiencing a drought. Drought only occurs when an area is abnormally dry. 
+            We all know that rain and snow do not fall evenly across the Earth. Some regions are wetter and others are drier. From season to season - and from year to year - the amount of rain or snow in a place can vary over a range. 
+            However, it is believed that, over a period of many years, the average amount of precipitation in a region is fairly consistent. For example, in the deserts of the American Southwest, average precipitation is less than 3 inches per year. But average annual precipitation in Atlanta is about 50 inches.
+           When an area gets less rain than usual, the soil also gets much less moisture.  
+             </p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole.jpg" width="335" height="471" >
+          <img src="../../../Images/normal_section/DroughtRealistic2.jpg" width="335" height="471" >
 
       </div>
     </div>
@@ -145,9 +149,9 @@ img {
   
   <div class="container">
     <div class="center">
-      <h2>What is the Sink hole earthquake in the world history?</h2>
+      <h2>What is the biggest Drought in the world history?</h2>
       <br/><br/>
-      <p class="paragraph">The Xiaozhai Tiankeng, also known as the Heavenly Pit, is the world's deepest sinkhole and also the largest in the Shaanxi cluster.It is located in Fengjie County of Chongqing Municipality in China.The Tiankeng formed over the Difeng cave, which in turn had been formed by a powerful underground river which still flows underneath the sinkhole. The underground river starts in the Tianjing fissure gorge and reaches a vertical cliff above the Migong River, forming a 4-metre  high waterfall. The length of this underground river is approximately 8.5 km (5.3 mi) and during these 8.5 kilometres, it falls 364 metres. </p>
+      <p class="paragraph">TThe 1950s Texas drought was a period between 1949 and 1957 in which the state received 30 to 50% less rain than normal, while temperatures rose above average. During this time, Texans experienced the second-, third-, and eighth-driest single years ever in the state – 1956, 1954, and 1951, respectively. The drought was described by a state water official as "the most costly and one of the most devastating droughts in 600 years.</p>
       </div>
       </div>
     
