--- a/website/Climatological/Ice Storm/IceStorm.html
+++ b/website/Climatological/Ice Storm/IceStorm.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Sink holes</title>
+    <title>Ice Storm</title>
 
     <style>
         * {
@@ -111,18 +111,21 @@ img {
         </header>
         
     <div style="text-align:center;">
-    <h1>Sink holes</h1>
+    <h1>Ice Storm</h1>
     </div>
   
 
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What is a Sink holes?</b></h2>
-        <p class="paragraph">Sinkholes are part of the slow, natural process of erosion in Florida’s limestone terrain that occur over thousands of years. These common geologic phenomena generally occur where the limestone is within a few hundred feet of the land’s surface.Though most are only 10 to 12 feet in diameter, sinkholes have been known to expand to hundreds of feet in diameter. Many of central and north Florida’s lakes actually are the result of old sinkholes.</p>
+        <h2 class="xlarge-font"><b>What is an Ice Storm?</b></h2>
+        <p class="paragraph">An ice storm is a type of winter storm during which icy rain falls. 
+           This can cause tremendous economic and physical damage, damage to utilities and transportation systems (planes, trains, vehicles).
+          Driving during such a storm is extremely dangerous because ice can cause any vehicle to spin out of control, and lead to scary car accidents.
+          Winter storms are also referred to by the meteorological services as "rogue killers" because they are the indirect cause of many deaths, such as hypothermia, which is the result of prolonged exposure to cold. One of the most severe ice storms is the storm </p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole2.jpg" width="335" height="471">
+          <img src="../../../Images/normal_section/Ice_Storm.jpg" width="335" height="471">
       </div>
     </div>
   </div>
@@ -133,11 +136,12 @@ img {
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What causes Sink holes and where do they happen?</b></h2>
-        <p class="paragraph">Rainfall percolating, or seeping, through the soil absorbs carbon dioxide and reacts with decaying vegetation, creating a slightly acidic water. That water moves through spaces and cracks underground, slowly dissolving limestone and creating a network of cavities and voids. As the limestone dissolves, pores and cracks are enlarged and carry even more acidic water. Sinkholes are formed when the land surface above collapses or sinks into the cavities or when surface material is carried downward into the voids.</p>
+        <h2 class="xlarge-font"><b>What causes Ice Storm and where do they happen?</b></h2>
+        <p class="paragraph">  All ice storms are caused by freezing rain. These showers are formed, as the raindrops move in a thin layer of air below freezing just near the surface of the ground, this allows them to freeze on contact with the ground, trees, cars and other objects.  Ice storms coat everything in the landscape with ice that can be so heavy it can split trees in half and .turn roads and sidewalks into deadly ice slides. 
+             </p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole.jpg" width="335" height="471" >
+          <img src="../../../Images/normal_section/Hailstorm.jpg" width="335" height="471" >
 
       </div>
     </div>
@@ -145,9 +149,9 @@ img {
   
   <div class="container">
     <div class="center">
-      <h2>What is the Sink hole earthquake in the world history?</h2>
+      <h2>What is the biggest Ice Storm in the world history?</h2>
       <br/><br/>
-      <p class="paragraph">The Xiaozhai Tiankeng, also known as the Heavenly Pit, is the world's deepest sinkhole and also the largest in the Shaanxi cluster.It is located in Fengjie County of Chongqing Municipality in China.The Tiankeng formed over the Difeng cave, which in turn had been formed by a powerful underground river which still flows underneath the sinkhole. The underground river starts in the Tianjing fissure gorge and reaches a vertical cliff above the Migong River, forming a 4-metre  high waterfall. The length of this underground river is approximately 8.5 km (5.3 mi) and during these 8.5 kilometres, it falls 364 metres. </p>
+      <p class="paragraph">The North American Ice Storm of 1998 was a massive combination of five smaller successive ice storms in January 1998 that struck a relatively narrow swath of land from eastern Ontario to southern Quebec, New Brunswick and Nova Scotia in Canada, and bordering areas from northern New York to central Maine in the United States. It caused massive damage to trees and electrical infrastructure all over the area, leading to widespread long-term power outages. Millions were left in the dark for periods varying from days to several weeks, and in some instances, months. It led to 34 fatalities, a shutdown of activities in large cities like Montreal and Ottawa, and an unprecedented effort in reconstruction of the power grid. The ice storm led to the largest deployment of Canadian military personnel since the Korean War, with over 16,000 Canadian Forces personnel deployed, 12,000 in Quebec and 4,000 in Ontario at the height of the crisis.</p>
       </div>
       </div>
     
