--- a/website/Hydrologicaltopics/Floods/Floods.html
+++ b/website/Hydrologicaltopics/Floods/Floods.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Sink holes</title>
+    <title>Landslides</title>
 
     <style>
         * {
@@ -111,18 +111,18 @@ img {
         </header>
         
     <div style="text-align:center;">
-    <h1>Sink holes</h1>
+    <h1>Landslides</h1>
     </div>
   
 
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What is a Sink holes?</b></h2>
-        <p class="paragraph">Sinkholes are part of the slow, natural process of erosion in Florida’s limestone terrain that occur over thousands of years. These common geologic phenomena generally occur where the limestone is within a few hundred feet of the land’s surface.Though most are only 10 to 12 feet in diameter, sinkholes have been known to expand to hundreds of feet in diameter. Many of central and north Florida’s lakes actually are the result of old sinkholes.</p>
+        <h2 class="xlarge-font"><b>What is a Flood?</b></h2>
+        <p class="paragraph">A flood is an overflow of water that submerges land that is normally dry. Flooding is studied by the discipline of hydrology. They are the most common and widespread severe weather event. They can also occur rapidly or build up gradually.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole2.jpg" width="335" height="471">
+          <img src="../../../Images/normal_section/Flood2.jpg" width="335" height="471">
       </div>
     </div>
   </div>
@@ -133,11 +133,16 @@ img {
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What causes Sink holes and where do they happen?</b></h2>
-        <p class="paragraph">Rainfall percolating, or seeping, through the soil absorbs carbon dioxide and reacts with decaying vegetation, creating a slightly acidic water. That water moves through spaces and cracks underground, slowly dissolving limestone and creating a network of cavities and voids. As the limestone dissolves, pores and cracks are enlarged and carry even more acidic water. Sinkholes are formed when the land surface above collapses or sinks into the cavities or when surface material is carried downward into the voids.</p>
+        <h2 class="xlarge-font"><b>What causes Flood and where do they happen?</b></h2>
+        <p class="paragraph"> Floods are caused by a number of factors such as: heavy rainfall, strong winds over water, unusually high tides, tsunami or dam failure, etc.
+            There are periodic floods , which occur on many rivers, forming a so-called flood plain around the river area.
+            As we all know during rain or snow part of the water is retained in ponds or soil .Another part is absorbed by grass and vegetation, a third part evaporates and the rest moves over the ground as surface runoff. Flooding occurs, however, when lakes, river beds, soil and vegetation cannot absorb this water. Usually flooding of rivers is often caused by heavy rain, and sometimes water is increased by snowmelt. A flood that rises quickly, with little or no advance warning, is called a flash flood.  These flash floods usually result from intense rainfall over a relatively small area. High winds over water can also cause flooding. 
+            Even when rainfall is relatively low, the shores of lakes and bays can be flooded by strong winds - such as during hurricanes - that blow water into coastal areas.
+            Unusual tides can also lead to flooding This is seen in a number of coastal areas that are inundated by unusually high tides, such as spring tides, especially when compounded by high winds and storms.
+             </p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole.jpg" width="335" height="471" >
+          <img src="../../../Images/normal_section/FloodRealistic.jpg" width="335" height="471" >
 
       </div>
     </div>
@@ -145,9 +150,9 @@ img {
   
   <div class="container">
     <div class="center">
-      <h2>What is the Sink hole earthquake in the world history?</h2>
+      <h2>What is the biggest Flood in the world history?</h2>
       <br/><br/>
-      <p class="paragraph">The Xiaozhai Tiankeng, also known as the Heavenly Pit, is the world's deepest sinkhole and also the largest in the Shaanxi cluster.It is located in Fengjie County of Chongqing Municipality in China.The Tiankeng formed over the Difeng cave, which in turn had been formed by a powerful underground river which still flows underneath the sinkhole. The underground river starts in the Tianjing fissure gorge and reaches a vertical cliff above the Migong River, forming a 4-metre  high waterfall. The length of this underground river is approximately 8.5 km (5.3 mi) and during these 8.5 kilometres, it falls 364 metres. </p>
+      <p class="paragraph">The Johnstown Flood (locally known as the Great Flood of 1889) occurred on Friday, May 31, 1889, following a catastrophic failure of the South Fork Dam, located on the south fork of the Little Conemaugh River, 14 miles (23 km) upstream from the town of Johnstown, Pennsylvania. The dam broke after several days of exceptionally heavy rainfall, releasing 14.55 million cubic meters of water. With a volumetric flow that temporarily equaled the average flow of the Mississippi River, the flood killed 2,209 people and caused $17 million in damages (about $490 million in 2020 dollars).</p>
       </div>
       </div>
     
