--- a/website/Meterological/Cyclone/Cyclone.html
+++ b/website/Meterological/Cyclone/Cyclone.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Sink holes</title>
+    <title>Bizzard</title>
 
     <style>
         * {
@@ -111,18 +111,18 @@ img {
         </header>
         
     <div style="text-align:center;">
-    <h1>Sink holes</h1>
+    <h1>Bizzard</h1>
     </div>
   
 
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What is a Sink holes?</b></h2>
-        <p class="paragraph">Sinkholes are part of the slow, natural process of erosion in Florida’s limestone terrain that occur over thousands of years. These common geologic phenomena generally occur where the limestone is within a few hundred feet of the land’s surface.Though most are only 10 to 12 feet in diameter, sinkholes have been known to expand to hundreds of feet in diameter. Many of central and north Florida’s lakes actually are the result of old sinkholes.</p>
+        <h2 class="xlarge-font"><b>What is a Bizzard?</b></h2>
+        <p class="paragraph">Severe winter storms that are accompanied by heavy snow and strong winds are so-called blizzards or snowstorms. When very strong winds stir up the snow that has already fallen and accumulated then we speak of a ground blizzard. Snowstorms can cause great damage and destruction, especially in areas and regions where they are rare. This can negatively affect the meateconomy. </p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole2.jpg" width="335" height="471">
+          <img src="../../../Images/normal_section/CycloneRealistic.jpg" width="335" height="471">
       </div>
     </div>
   </div>
@@ -133,11 +133,11 @@ img {
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What causes Sink holes and where do they happen?</b></h2>
-        <p class="paragraph">Rainfall percolating, or seeping, through the soil absorbs carbon dioxide and reacts with decaying vegetation, creating a slightly acidic water. That water moves through spaces and cracks underground, slowly dissolving limestone and creating a network of cavities and voids. As the limestone dissolves, pores and cracks are enlarged and carry even more acidic water. Sinkholes are formed when the land surface above collapses or sinks into the cavities or when surface material is carried downward into the voids.</p>
+        <h2 class="xlarge-font"><b>What causes Bizzards and where do they happen?</b></h2>
+        <p class="paragraph"> Snow forms when two air masses collide one with warm air and one with cold air they collide and make a front if there is more cold air it creates a snow if there is more warm air it will just rain. When this snow is combined with the wind, and decreased visibility, it forms a blizzard.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole.jpg" width="335" height="471" >
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/TIP_1979-10-12-2333.jpg/260px-TIP_1979-10-12-2333.jpg" width="335" height="471" >
 
       </div>
     </div>
@@ -145,9 +145,11 @@ img {
   
   <div class="container">
     <div class="center">
-      <h2>What is the Sink hole earthquake in the world history?</h2>
+      <h2>What is the biggest Bizzard in the world history?</h2>
       <br/><br/>
-      <p class="paragraph">The Xiaozhai Tiankeng, also known as the Heavenly Pit, is the world's deepest sinkhole and also the largest in the Shaanxi cluster.It is located in Fengjie County of Chongqing Municipality in China.The Tiankeng formed over the Difeng cave, which in turn had been formed by a powerful underground river which still flows underneath the sinkhole. The underground river starts in the Tianjing fissure gorge and reaches a vertical cliff above the Migong River, forming a 4-metre  high waterfall. The length of this underground river is approximately 8.5 km (5.3 mi) and during these 8.5 kilometres, it falls 364 metres. </p>
+      <p class="paragraph">One of the largest and first recorded and described blizzards (snowstorms) was in 1888 affected the United States and led to the destruction of huge amounts of crops. 
+        Other huge blizzards were also recorded in 1972.  In Iran, in 1993, the so-called "super storm" which started from the Gulf of Mexico and traveled northwards, causing damage to 26 states and also damage in Canada and caused the death of over 300 people. Another such severe blizzard was recorded in Asia in Afghanistan in 2008 which caused very extensive damage.
+        </p>
       </div>
       </div>
     
