--- a/website/Meterological/Thunderstorm/ThunderStorms.html
+++ b/website/Meterological/Thunderstorm/ThunderStorms.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Sink holes</title>
+    <title>Thunderstorm</title>
 
     <style>
         * {
@@ -111,18 +111,18 @@ img {
         </header>
         
     <div style="text-align:center;">
-    <h1>Sink holes</h1>
+    <h1>Thunderstorm</h1>
     </div>
   
 
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What is a Sink holes?</b></h2>
-        <p class="paragraph">Sinkholes are part of the slow, natural process of erosion in Florida’s limestone terrain that occur over thousands of years. These common geologic phenomena generally occur where the limestone is within a few hundred feet of the land’s surface.Though most are only 10 to 12 feet in diameter, sinkholes have been known to expand to hundreds of feet in diameter. Many of central and north Florida’s lakes actually are the result of old sinkholes.</p>
+        <h2 class="xlarge-font"><b>What is a Thunderstorm?</b></h2>
+        <p class="paragraph">A thunderstorm is a storm with lightning and thunder. Its produced by a cumulonimbus cloud, usually producing gusty winds, heavy rain and sometimes hail. </p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole2.jpg" width="335" height="471">
+          <img src="../../../Images/normal_section/StormRealistic.jpg" width="335" height="471">
       </div>
     </div>
   </div>
@@ -133,11 +133,11 @@ img {
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What causes Sink holes and where do they happen?</b></h2>
-        <p class="paragraph">Rainfall percolating, or seeping, through the soil absorbs carbon dioxide and reacts with decaying vegetation, creating a slightly acidic water. That water moves through spaces and cracks underground, slowly dissolving limestone and creating a network of cavities and voids. As the limestone dissolves, pores and cracks are enlarged and carry even more acidic water. Sinkholes are formed when the land surface above collapses or sinks into the cavities or when surface material is carried downward into the voids.</p>
+        <h2 class="xlarge-font"><b>What causes Thunderstorm and where do they happen?</b></h2>
+        <p class="paragraph"> For a thunderstorm to form the following conditions must be present: moisture, unstable air that must be relatively warm and rising quickly. Finally, there must be a updraft. It can be formed by fronts, sea breezes or mountains.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole.jpg" width="335" height="471" >
+          <img src="../../../Images/normal_section/Thunderstorm.jpg" width="335" height="471" >
 
       </div>
     </div>
@@ -145,9 +145,12 @@ img {
   
   <div class="container">
     <div class="center">
-      <h2>What is the Sink hole earthquake in the world history?</h2>
+      <h2>What is the biggest Thunderstorm in the world history?</h2>
       <br/><br/>
-      <p class="paragraph">The Xiaozhai Tiankeng, also known as the Heavenly Pit, is the world's deepest sinkhole and also the largest in the Shaanxi cluster.It is located in Fengjie County of Chongqing Municipality in China.The Tiankeng formed over the Difeng cave, which in turn had been formed by a powerful underground river which still flows underneath the sinkhole. The underground river starts in the Tianjing fissure gorge and reaches a vertical cliff above the Migong River, forming a 4-metre  high waterfall. The length of this underground river is approximately 8.5 km (5.3 mi) and during these 8.5 kilometres, it falls 364 metres. </p>
+      <p class="paragraph">Throughout human history, there were many huge and dangerous thunderstorms, but the biggest one recorded was in India, and it occurred on December 1st, 2014. It was the highest voltage thunderstorm ever recorded, with 1.3 billion volts.
+
+
+        </p>
       </div>
       </div>
     
