--- a/website/Meterological/Tornado/Tornado.html
+++ b/website/Meterological/Tornado/Tornado.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Sink holes</title>
+    <title>Tornado</title>
 
     <style>
         * {
@@ -111,18 +111,18 @@ img {
         </header>
         
     <div style="text-align:center;">
-    <h1>Sink holes</h1>
+    <h1>Tornado</h1>
     </div>
   
 
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What is a Sink holes?</b></h2>
-        <p class="paragraph">Sinkholes are part of the slow, natural process of erosion in Florida’s limestone terrain that occur over thousands of years. These common geologic phenomena generally occur where the limestone is within a few hundred feet of the land’s surface.Though most are only 10 to 12 feet in diameter, sinkholes have been known to expand to hundreds of feet in diameter. Many of central and north Florida’s lakes actually are the result of old sinkholes.</p>
+        <h2 class="xlarge-font"><b>What is a Tornado?</b></h2>
+        <p class="paragraph"> Tornadoes are vertical funnels of rapidly spinning air. Their winds may top 250 miles an hour and can clear a pathway a mile wide and 50 miles long. Also known as twisters, tornadoes are born in thunderstorms and are often accompanied by hail. Giant, persistent thunderstorms called supercells spawn the most destructive tornadoes. It's often portended by a dark, greenish sky. Black storm clouds gather. Baseball-size hail may fall. A funnel suddenly appears, as though descending from a cloud. The funnel hits the ground and roars forward with a sound like that of a freight train approaching. The tornado tears up everything in its path.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole2.jpg" width="335" height="471">
+          <img src="../../../Images/normal_section/Tornado_2.jpg" width="335" height="471">
       </div>
     </div>
   </div>
@@ -133,11 +133,13 @@ img {
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What causes Sink holes and where do they happen?</b></h2>
-        <p class="paragraph">Rainfall percolating, or seeping, through the soil absorbs carbon dioxide and reacts with decaying vegetation, creating a slightly acidic water. That water moves through spaces and cracks underground, slowly dissolving limestone and creating a network of cavities and voids. As the limestone dissolves, pores and cracks are enlarged and carry even more acidic water. Sinkholes are formed when the land surface above collapses or sinks into the cavities or when surface material is carried downward into the voids.</p>
+        <h2 class="xlarge-font"><b>What causes Tornado and where do they happen?</b></h2>
+        <p class="paragraph">"Tornado Alley," a region that includes the area in the eastern state of South Dakota, Nebraska, Kansas, Oklahoma, northern Texas, and eastern Colorado, is often home to the most powerful and destructive of these storms. U.S. tornadoes cause 80 deaths and more than 1,500 injuries per year.The most violent tornadoes come from supercells, large thunderstorms that have winds already in rotation. About one in a thousand storms becomes a supercell, and one in five or six supercells spawns off a tornado.Tornadoes can occur at any time of year, but they are more common during a distinct season that begins in early spring for the states along the Gulf of Mexico. The season follows the jet stream—as it swings farther north, so does tornado activity. May generally has more tornadoes than any other month, but April's twisters are sometimes more violent. Farther north, tornadoes tend to be more common later in summer.
+
+        </p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole.jpg" width="335" height="471" >
+          <img src="../../../Images/normal_section/Tornado.jpg" width="335" height="471" >
 
       </div>
     </div>
@@ -145,9 +147,10 @@ img {
   
   <div class="container">
     <div class="center">
-      <h2>What is the Sink hole earthquake in the world history?</h2>
+      <h2>What is the biggest Tornado in the world history?</h2>
       <br/><br/>
-      <p class="paragraph">The Xiaozhai Tiankeng, also known as the Heavenly Pit, is the world's deepest sinkhole and also the largest in the Shaanxi cluster.It is located in Fengjie County of Chongqing Municipality in China.The Tiankeng formed over the Difeng cave, which in turn had been formed by a powerful underground river which still flows underneath the sinkhole. The underground river starts in the Tianjing fissure gorge and reaches a vertical cliff above the Migong River, forming a 4-metre  high waterfall. The length of this underground river is approximately 8.5 km (5.3 mi) and during these 8.5 kilometres, it falls 364 metres. </p>
+      <p class="paragraph">The most violent tornado in recorded history was the Tri-State Tornado, which spread through parts of Missouri, Illinois, and Indiana on March 18, 1925. It is considered an F5 on the Fujita Scale, even though tornadoes were not ranked on any scale at the time. It holds records for longest path length at 352 km, longest duration at about 3½ hours, and fastest forward speed for a significant tornado at 117 km/h anywhere on Earth. 
+        </p>
       </div>
       </div>
     
