--- a/website/Hydrologicaltopics/Limnic eruptions/Limnic.html
+++ b/website/Hydrologicaltopics/Limnic eruptions/Limnic.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Sink holes</title>
+    <title>Limnic Eruption</title>
 
     <style>
         * {
@@ -111,18 +111,18 @@ img {
         </header>
         
     <div style="text-align:center;">
-    <h1>Sink holes</h1>
+    <h1>Limnic Eruption</h1>
     </div>
   
 
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What is a Sink holes?</b></h2>
-        <p class="paragraph">Sinkholes are part of the slow, natural process of erosion in Florida’s limestone terrain that occur over thousands of years. These common geologic phenomena generally occur where the limestone is within a few hundred feet of the land’s surface.Though most are only 10 to 12 feet in diameter, sinkholes have been known to expand to hundreds of feet in diameter. Many of central and north Florida’s lakes actually are the result of old sinkholes.</p>
+        <h2 class="xlarge-font"><b>What is a Limnic eruption?</b></h2>
+        <p class="paragraph">A limnic eruption is  when a gas, usually CO2, suddenly erupts from the bottom of deep lake waters. This gas can and does cause suffocation and death of wildlife, livestock and humans. This same eruption can cause a tsunami in the lake, as the rising gas is of enormous force, which force can displace a huge amount of water. It is believed that landslides , volcanic activity or explosions.can also trigger such an eruption.  </p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole2.jpg" width="335" height="471">
+          <img src="../../../Images/normal_section/Lumnic_eruption2.jpg" width="335" height="471">
       </div>
     </div>
   </div>
@@ -133,11 +133,11 @@ img {
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What causes Sink holes and where do they happen?</b></h2>
-        <p class="paragraph">Rainfall percolating, or seeping, through the soil absorbs carbon dioxide and reacts with decaying vegetation, creating a slightly acidic water. That water moves through spaces and cracks underground, slowly dissolving limestone and creating a network of cavities and voids. As the limestone dissolves, pores and cracks are enlarged and carry even more acidic water. Sinkholes are formed when the land surface above collapses or sinks into the cavities or when surface material is carried downward into the voids.</p>
+        <h2 class="xlarge-font"><b>What causes Limnic Eruption and where do they happen?</b></h2>
+        <p class="paragraph">The chances of such a sequence of events may go up as the planet warms, MacIntyre says. Climate change is expected to bring more rain to East Africa, and “it’s going to come in the form of more extreme rain events with bigger intervals of drought in between”. Another possible trigger is volcanic activity under the lake or from surrounding volcanoes, but scientists think the risk of that is low. A 2002 eruption of nearby Mount Nyiragongo didn’t bring in enough material to disrupt Kivu’s bottom layers. And modelling studies have shown that volcanism below the lake wouldn’t cause a big enough disruption either, MacIntyre says.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole.jpg" width="335" height="471" >
+          <img src="../../../Images/normal_section/Limnic_Eruption.png" width="335" height="471" >
 
       </div>
     </div>
@@ -145,9 +145,9 @@ img {
   
   <div class="container">
     <div class="center">
-      <h2>What is the Sink hole earthquake in the world history?</h2>
+      <h2>What is the biggest Limnic Eruption in the world history?</h2>
       <br/><br/>
-      <p class="paragraph">The Xiaozhai Tiankeng, also known as the Heavenly Pit, is the world's deepest sinkhole and also the largest in the Shaanxi cluster.It is located in Fengjie County of Chongqing Municipality in China.The Tiankeng formed over the Difeng cave, which in turn had been formed by a powerful underground river which still flows underneath the sinkhole. The underground river starts in the Tianjing fissure gorge and reaches a vertical cliff above the Migong River, forming a 4-metre  high waterfall. The length of this underground river is approximately 8.5 km (5.3 mi) and during these 8.5 kilometres, it falls 364 metres. </p>
+      <p class="paragraph"> To date, only two limnic eruptions have been observed and recorded.The first was in 1984 in Cameroon at Lake Monoun.This limnic eruption caused the death of 37 residents. And in 1986 a much larger eruption was recorded in nearby Lake Nios which caused the deaths of 1700 - 1800 people from suffocation.  </p>
       </div>
       </div>
     
