--- a/website/Meterological/Dust storms/Dust Storms.html
+++ b/website/Meterological/Dust storms/Dust Storms.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Sink holes</title>
+    <title>DustStorm</title>
 
     <style>
         * {
@@ -111,18 +111,18 @@ img {
         </header>
         
     <div style="text-align:center;">
-    <h1>Sink holes</h1>
+    <h1>DustStorm</h1>
     </div>
   
 
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What is a Sink holes?</b></h2>
-        <p class="paragraph">Sinkholes are part of the slow, natural process of erosion in Florida’s limestone terrain that occur over thousands of years. These common geologic phenomena generally occur where the limestone is within a few hundred feet of the land’s surface.Though most are only 10 to 12 feet in diameter, sinkholes have been known to expand to hundreds of feet in diameter. Many of central and north Florida’s lakes actually are the result of old sinkholes.</p>
+        <h2 class="xlarge-font"><b>What is a DustStorm?</b></h2>
+        <p class="paragraph">A dust storm is a wall of dust and debris that is often blown into an area by strong winds from thunderstorms. The wall of dust can be miles long and several thousand feet high. Dust storms happen in many places around the world. Most of the world’s dust storms occur over the Middle East and North Africa. However, they can also happen anywhere in the United States. In the U.S., dust storms are most common in the Southwest, where they peak in the springtime.On any given day, dust storms kick up a lot of dust into our air. In fact, scientists estimate that on average, about 44 billion pounds (20 teragrams) of dust are in Earth’s atmosphere at any one time.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole2.jpg" width="335" height="471">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Sandsturm_in_der_Namib_%282017%29.jpg/280px-Sandsturm_in_der_Namib_%282017%29.jpg" width="335" height="471">
       </div>
     </div>
   </div>
@@ -133,11 +133,11 @@ img {
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What causes Sink holes and where do they happen?</b></h2>
-        <p class="paragraph">Rainfall percolating, or seeping, through the soil absorbs carbon dioxide and reacts with decaying vegetation, creating a slightly acidic water. That water moves through spaces and cracks underground, slowly dissolving limestone and creating a network of cavities and voids. As the limestone dissolves, pores and cracks are enlarged and carry even more acidic water. Sinkholes are formed when the land surface above collapses or sinks into the cavities or when surface material is carried downward into the voids.</p>
+        <h2 class="xlarge-font"><b>What causes DustStorm and where do they happen?</b></h2>
+        <p class="paragraph"> ust storms are caused by very strong winds — often produced by thunderstorms. In dry regions, the winds can pull dust from the ground up into the air, creating a dust storm. An area's geography and plant life can also make it more likely to have dust storms.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole.jpg" width="335" height="471" >
+          <img src="../../../Images/normal_section/Dust_Storm.jpg" width="335" height="471" >
 
       </div>
     </div>
@@ -145,9 +145,10 @@ img {
   
   <div class="container">
     <div class="center">
-      <h2>What is the Sink hole earthquake in the world history?</h2>
+      <h2>What is the biggest DustStorm in the world history?</h2>
       <br/><br/>
-      <p class="paragraph">The Xiaozhai Tiankeng, also known as the Heavenly Pit, is the world's deepest sinkhole and also the largest in the Shaanxi cluster.It is located in Fengjie County of Chongqing Municipality in China.The Tiankeng formed over the Difeng cave, which in turn had been formed by a powerful underground river which still flows underneath the sinkhole. The underground river starts in the Tianjing fissure gorge and reaches a vertical cliff above the Migong River, forming a 4-metre  high waterfall. The length of this underground river is approximately 8.5 km (5.3 mi) and during these 8.5 kilometres, it falls 364 metres. </p>
+      <p class="paragraph">One of the most devastating storms of the 1930s Dust Bowl era sweeps across the region on April 14, 1935. High winds kicked up clouds of millions of tons of dirt and dust so dense and dark that some eyewitnesses believed the world was coming to an end.
+        </p>
       </div>
       </div>
     
