--- a/website/Meterological/Fire storms/FireStorms.html
+++ b/website/Meterological/Fire storms/FireStorms.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
-    <title>Sink holes</title>
+    <title>Fire Storm</title>
 
     <style>
         * {
@@ -111,18 +111,18 @@ img {
         </header>
         
     <div style="text-align:center;">
-    <h1>Sink holes</h1>
+    <h1>Fire Storm</h1>
     </div>
   
 
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What is a Sink holes?</b></h2>
-        <p class="paragraph">Sinkholes are part of the slow, natural process of erosion in Florida’s limestone terrain that occur over thousands of years. These common geologic phenomena generally occur where the limestone is within a few hundred feet of the land’s surface.Though most are only 10 to 12 feet in diameter, sinkholes have been known to expand to hundreds of feet in diameter. Many of central and north Florida’s lakes actually are the result of old sinkholes.</p>
+        <h2 class="xlarge-font"><b>What is a Fire Storm?</b></h2>
+        <p class="paragraph"> firestorm is a conflagration which attains such intensity that it creates and sustains its own wind system. It is most commonly a natural phenomenon, created during some of the largest bushfires and wildfires. Although the term has been used to describe certain large fires,[1] the phenomenon's determining characteristic is a fire with its own storm-force winds from every point of the compass towards the storm's center, where the air is heated and then ascends.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole2.jpg" width="335" height="471">
+          <img src="../../../Images/normal_section/Fire_Storm.jpg" width="335" height="471">
       </div>
     </div>
   </div>
@@ -133,11 +133,11 @@ img {
   <div class="container">
     <div class="row">
       <div class="left">
-        <h2 class="xlarge-font"><b>What causes Sink holes and where do they happen?</b></h2>
-        <p class="paragraph">Rainfall percolating, or seeping, through the soil absorbs carbon dioxide and reacts with decaying vegetation, creating a slightly acidic water. That water moves through spaces and cracks underground, slowly dissolving limestone and creating a network of cavities and voids. As the limestone dissolves, pores and cracks are enlarged and carry even more acidic water. Sinkholes are formed when the land surface above collapses or sinks into the cavities or when surface material is carried downward into the voids.</p>
+        <h2 class="xlarge-font"><b>What causes Fire Storm and where do they happen?</b></h2>
+        <p class="paragraph"> A firestorm is created as a result of the "chimney effect" as the heat of the original fire draws in more and more of the surrounding air. This draft can be quickly increased if a low level jet stream exists over or near the fire, or when an atmospheric temperature inversion cap is pierced by it.</p>
       </div>
       <div class="right">
-          <img src="../../../Images/normal_section/sinkhole.jpg" width="335" height="471" >
+          <img src="https://cdn.images.express.co.uk/img/dynamic/78/590x/Dixie-Fire-1480577.jpg?r=1629717140202" width="335" height="471" >
 
       </div>
     </div>
@@ -145,9 +145,10 @@ img {
   
   <div class="container">
     <div class="center">
-      <h2>What is the Sink hole earthquake in the world history?</h2>
+      <h2>What is the biggest Fire Storm in the world history?</h2>
       <br/><br/>
-      <p class="paragraph">The Xiaozhai Tiankeng, also known as the Heavenly Pit, is the world's deepest sinkhole and also the largest in the Shaanxi cluster.It is located in Fengjie County of Chongqing Municipality in China.The Tiankeng formed over the Difeng cave, which in turn had been formed by a powerful underground river which still flows underneath the sinkhole. The underground river starts in the Tianjing fissure gorge and reaches a vertical cliff above the Migong River, forming a 4-metre  high waterfall. The length of this underground river is approximately 8.5 km (5.3 mi) and during these 8.5 kilometres, it falls 364 metres. </p>
+      <p class="paragraph">Peshtigo Fire. The Peshtigo Fire of 1871 was the deadliest wildfire in recorded human history. The fire occurred on October 8, 1871, on a day when the entirety of the Great Lake region of the United States was affected by a huge conflagration that spread throughout the U.S. states of Wisconsin, Michigan and Illinois.
+        </p>
       </div>
       </div>
     
