--- a/website/Climatological.html
+++ b/website/Climatological.html
@@ -4,6 +4,7 @@
     <!-- Font Awesome CSS--><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css" />
     <!-- Navbar --><link rel="stylesheet" href="css/navbar.css"/>
     <!-- Colors --><link rel="stylesheet" href="css/color.css"/>
+    <!-- Footer --><link rel="stylesheet" href="css/footer.css"/> 
     <!-- Scroll Bar --><link rel="stylesheet" href="css/scroll_bar.css"/>
     <!-- Switch Disasters--><link rel="stylesheet" href="css/switch_arrow_disasters.css"/>
     <link rel="stylesheet" href="css/subtopics.css"/>
@@ -57,19 +58,43 @@
             <div class="item-txt _tr_Climatological_Drought">Drought</div>
         </div></a>
 
-        <a href="Climatological/IceStorm.html"><div class="item"  style="background-image:url(../Images/normal_section/Ice_Storm.jpg)">
+        <a href="Climatological/IceStorm.html"> <div class="item"  style="background-image:url(../Images/normal_section/Ice_Storm.jpg)">
             <div class="item-txt _tr_Climatological_Ice_Storm">Ice Storm</div>
         </div></a>
     </div>
         
+    </div>
+</div>
+
+    <!-- Switch Mode --><script src="javascript/switch_color_mode.js"></script>
+    <!-- Switch Language --><script src="javascript/switch_language.js"></script>
+    <!-- Bootstrap JS --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+
+
+
+
+<footer class="footer" style="transform:translateY(150px);">
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
     </div>
 
     <div class="switch_arrow_disasters">
         <div class="right_switch_arrow_disasters"><a class="right_arrow" href="meteorological.html"><i class="fas fa-arrow-circle-right"></i></a></div>
         <div class="left_switch_arrow_disasters"><a class="left_arrow" href="hydrological.html"><i class="fas fa-arrow-circle-left"></i></a></div>
     </div>
+         
+    </ul>
+    <ul class="menu">
+      <li class="menuitem"><a class="menulink" href="index.html#">Home</a></li>
+      <li class="menuitem"><a class="menulink" href="index.html#About-us">About</a></li>
+      <li class="menuitem"><a class="menulink" href="mailto:poseidonpgkpi@gmail.com
+        ">Contact</a></li>
 
-    <!-- Switch Mode --><script src="javascript/switch_color_mode.js"></script>
-    <!-- Switch Language --><script src="javascript/switch_language.js"></script>
-    <!-- Bootstrap JS --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    </ul>
+    <img src="../Images/Logo.png" style="width:150px"><p>Poseidon</p>
+
+</footer>
