--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,7 @@
   <!-- Font Awesome CSS--><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css" />
   <!-- Navbar --><link rel="stylesheet" href="css/navbar.css"/>
   <!-- Colors --><link rel="stylesheet" href="css/color.css"/>
+  <!-- Footer --><link rel="stylesheet" href="css/footer.css"/>
   <!-- Scroll Bar --><link rel="stylesheet" href="css/scroll_bar.css"/>
   <link rel="stylesheet" href="css/subtopics"/>
   <link href="css/style.css" rel="stylesheet">
@@ -137,8 +138,29 @@
       <h4 class="role _tr_Designer">Designer</h4>
     </div>
   </div>
+
 </div>
 
+<footer class="footer">
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
+    </div>
+  
+         
+    </ul>
+    <ul class="menu">
+      <li class="menuitem"><a class="menulink" href="index.html#">Home</a></li>
+      <li class="menuitem"><a class="menulink" href="index.html#About-us">About</a></li>
+      <li class="menuitem"><a class="menulink" href="mailto:poseidonpgkpi@gmail.com
+        ">Contact</a></li>
+
+    </ul>
+    <img src="../Images/Logo.png" style="width:150px"><p>Poseidon</p>
+
+</footer>
     <!-- Switch Color Mode --><script src="javascript/switch_color_mode.js"></script>
     <!-- Switch Language --><script src="javascript/switch_language.js"></script>
     <!-- Bootstrap JS --><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
